--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,22 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    color: #8d97ad;
+}
+
+.top-bar {
+    width: 100%;
+    height: 70px;
+    left: 0px;
+    padding: 25px 15px;
+    margin-bottom: 20px;
+    background-color: #223850;
+}
+
+.top-bar > img {
+    background: url(images/logo-light.svg) no-repeat;
+    width: 180px; 
+    height: 65px;
 }
 
 .shopping-cart {
@@ -12,4 +28,9 @@ body {
 .table {
     width: 50%;
     border: 1px solid #000000;
+    padding: 20px;
+}
+
+.table > tr > td {
+    padding: 5px;
 }
