--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,11 @@ body {
     color: #8d97ad;
 }
 
+table, th, td { 
+    border: 1px solid #000000;
+    padding: 15px;
+}
+
 .top-bar {
     width: 100%;
     height: 70px;
@@ -25,11 +30,17 @@ body {
     justify-content: center;
 }
 
+.table-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .table {
     width: 50%;
-    border: 1px solid #000000;
-    padding: 20px;
+    border-collapse: collapse;
 }
+
 
 .table > tr > td {
     padding: 5px;
